--- a/CursoAngularNETCore_TiendaEnLinea/Tiendaenlinea.DAL/Tiendaenlinea.DAL.csproj
+++ b/CursoAngularNETCore_TiendaEnLinea/Tiendaenlinea.DAL/Tiendaenlinea.DAL.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tiendaenlinea.Models\Tiendaenlinea.Models.csproj" />
+  </ItemGroup>
+
 </Project>
