metodo extension para db

--- a/CursoAngularNETCore_TiendaEnLinea/Tiendaenlinea.API/appsettings.json
+++ b/CursoAngularNETCore_TiendaEnLinea/Tiendaenlinea.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection" : "Server=ESTEBANLAPTOPN4; DataBase=CursoAngularNETCoreApi_TiendaEnLinea; Trusted_Connection=True; TrustServerCertificate=True;"
+  }
 }
